pkg/lang/syntax/testdata/ub/invalid/selector-body/stack-dotted-state-backend.ub
stack: {
  state: local.extra {}
  encryption: noop {}
}
